# unitree_ros

./: .README.md.swp  README.md  tags
laikago_real/: CMakeLists.txt  package.xml
laikago_real/launch/: laikago_driver.launch
laikago_real/src/: laikago_driver.cpp  position_mode.cpp  torque_mode.cpp  velocity_mode.cpp  walk_mode.cpp
math_utils/: CMakeLists.txt  package.xml
math_utils/include/math_utils/: .running_stats.h.swp  orientation_utils.hpp  running_covariance.h  running_stats.h
math_utils/src/: .running_stats.cpp.swp  orientation_utils.cpp  running_covariance.cpp  running_stats.cpp
robots/a1_description/xacro/: gazebo.xacro  robot.xacro  robot_hokuyo.xacro  robot_rplidar.xacro  robot_velodyne.xacro
robots/laikago_description/meshes/: azurekinect.dae  laptop_mount.STL
robots/laikago_description/xacro/: gazebo.xacro  robot.xacro
unitree_controller/: CMakeLists.txt  package.xml
unitree_controller/src/: joint_torque_control_main.cpp  test_gazebo_pos_control.cpp
unitree_controller/src/test/: test_gazebo_pos_control.cpp
unitree_gazebo/: CMakeLists.txt  package.xml
unitree_gazebo/config/: a1.rviz  a1_search.rviz  a1_ver2.rviz  laikago.rviz  robot.lua
unitree_gazebo/launch/: a1_ahg_nav.launch  a1_amrl.launch  a1_map.launch  a1_movebase.launch  a1_search.launch  laikago_ahg_nav.launch  laikago_amrl.launch  laikago_empty_nav.launch  normal.launch  simple.launch  velodyne_2d.launch
unitree_legged_msgs/msg/: MotorCmd.msg
unitree_legged_real/: CMakeLists.txt  ipconfig.sh  package.xml
unitree_legged_real/cmake/: FindPnC.cmake
unitree_legged_real/include/unitree_legged_real/: A1HighDriver.h  Go1HighDriver.h
unitree_legged_real/launch/: .a1_search.launch.swp  a1-121_enml_mas.launch  a1-121_visual.launch  a1-950_enml_mas.launch  a1-950_visual.launch  a1_ahg.launch  a1_ahg_filtered_odom.launch  a1_ahg_nav_loc.launch  a1_ahg_raw_odom.launch  a1_ahg_simple_odom.launch  a1_ahg_waypoint_behavior.launch  a1_data_collection.launch  a1_enml_mas.launch  a1_map_en.launch  a1_search.launch  a1_visual.launch  realsense_to_laserscan.launch  test_realsense2laser.launch
unitree_legged_real/scripts/: a1_tf_publisher
unitree_legged_real/src/: A1HighDriver.cc  A1HighDriver.h  A1HighDriver_gather_publish.cc  A1HighDriver_main.cc  A1HighDriver_recover.cc  A1HighDriver_waypoint_pose.cc  Driver_main.cc  Go1HighDriver.cc  Go1HighDriver_main.cc  a1_121_initialpose_converter.cc  a1_950_initialpose_converter.cc  a1_driver.cpp  a1_driver_filtered_odom.cpp  a1_driver_pose_at_waypoint.cpp  a1_driver_raw_odom.cpp  a1_driver_simple_odom.cpp  a1_gather_publish.cpp  a1_waypoints.cpp  wbic.cpp
unitree_legged_real/src/exe/: walk_example.cpp
unitree_legged_real/src/test/: test_a1_odom.cpp  test_looking_poses.cpp  test_pd.cpp  test_pnc.cpp  test_switch_control.cpp
unitree_legged_real_old/: CMakeLists.txt  ipconfig.sh
unitree_legged_real_old/include/: Go1HighDriver.h
unitree_legged_real_old/launch/: go1_robot.launch
unitree_legged_real_old/src/: Go1HighDriver_main.cc
unitree_legged_real_old/src/exe/: walk_mode.cpp
unitree_navigation/: CMakeLists.txt  package.xml
unitree_navigation/config/: a1_depth_params.yaml  a1_hokuyo_params.yaml  a1_params.yaml  a1_puck_params.yaml  a1_realsense_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
unitree_navigation/config/a1/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params2.yaml  global_costmap_params.yaml  global_planner_params.yaml  global_planner_params2.yaml  local_costmap_params.yaml  localcostmap_common_params.yaml
unitree_navigation/include/: orientation_utils.hpp
unitree_navigation/launch/: a1.launch  a1_costmap.launch  a1_depth.launch  a1_planner.launch  amcl_diff.launch  gmapping.launch  move_base.launch
unitree_navigation/src/: a1_amrl_nav.cpp  laikago_amrl_nav.cpp  laikago_localization.sh  orientation_utils.cpp  test_amrl_nav.cpp
