<?xml version="1.0"?>
<package format="2">
  <name>unitree_navigation</name>
  <version>0.0.1</version>
  <description>The unitree_navigation package</description>
  <maintainer email="steveminq@utexas.edu">Minkyu Kim</maintainer>

    <license>BSD</license>
    <exec_depend>amcl</exec_depend>
    <exec_depend>movebase</exec_depend>
    <exec_depend>movebase-msgs</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>math_utils</exec_depend>
    <build_depend>math_utils</build_depend>
    	
    <buildtool_depend>genmsg</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <depend>unitree_legged_msgs</depend>

  <export>
  </export>
</package>
